# GUI

./: .gitignore  .gitmodules  CMakeLists.txt
src/: Application.cpp  Application.h  MainWindow.cpp  MainWindow.h  main.cpp
src/editor/: AccountConfigurationLoaderNode.cpp  AccountConfigurationLoaderNode.h  AccountSelectorNode.cpp  AccountSelectorNode.h  DataType.cpp  DataType.h  DataUpdaters.cpp  DataUpdaters.h  EditorNodePanel.cpp  EditorNodePanel.h  EndPointNode.cpp  EndPointNode.h  ExchangeEditor.cpp  ExchangeEditor.h  FixConnectionNode.cpp  FixConnectionNode.h  MessageExtractors.cpp  MessageExtractors.h  MessageFilters.cpp  MessageFilters.h  MessageProcessors.cpp  MessageProcessors.h  Node.cpp  Node.h  NodeData.cpp  NodeData.h  Pin.cpp  Pin.h  PinType.cpp  PinType.h  RequestEncoders.cpp  RequestEncoders.h  StateUpdaters.cpp  StateUpdaters.h  UDPConnectionNode.cpp  UDPConnectionNode.h  WebSocketConnectionNode.cpp  WebSocketConnectionNode.h
src/explorer/: ExplorerDialog.cpp  ExplorerDialog.h  ExplorerFavourites.cpp  ExplorerFavourites.h  ExplorerFolderView.cpp  ExplorerFolderView.h  ExplorerInput.cpp  ExplorerInput.h  ExplorerToolbar.cpp  ExplorerToolbar.h
src/panel/: LoggingPanel.cpp  LoggingPanel.h  OrderBookPanel.cpp  OrderBookPanel.h  TradingPanel.cpp  TradingPanel.h
src/window/: ConnectionPanel.cpp  ConnectionPanel.h  ExchangeControlPanel.cpp  ExchangeControlPanel.h  ExchangeEditor.cpp  ExchangeEditor.h  StartupWindow.cpp  StartupWindow.h
